Better handling of predicates from new RDF4J config schema.